re PR target/60504 (many Ada testsuite regressions on ARM/Linux)

PR target/60504
	* config/arm/arm.h (ASM_PREFERRED_EH_DATA_FORMAT): Expose from
	ARM_TARGET2_DWARF_FORMAT.

From-SVN: r209201